# acronis-tib-reader

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  RELEASE.md  REVIEW_NOTES.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  format_support_request.md
.github/workflows/: ci.yml  lint.yml
docs/: CONTRIBUTING.md  FORMAT.md  FORMAT_LEGACY.md  FORMAT_LEGACY_BLOB_178MB.md  FORMAT_LEGACY_BLOCKS.md  FORMAT_LEGACY_METADATA.md  FORMAT_LEGACY_RESIDUAL.md  FORMAT_TIBX.md  FORMAT_VERY_LEGACY.md  RESEARCH_TIBX.md  RE_HISTORY.md  TIBX_USER_GUIDE.md
docs/legacy/: ARCHIVE3_CHAINS.md  ARCHIVE3_CHUNK_INDEX.md  ARCHIVE3_DATA_MAP.md  ARCHIVE3_ENCRYPTION.md  ARCHIVE3_GHIDRA_SETUP.md  ARCHIVE3_HEADER_FORMAT.md  ARCHIVE3_LSM_CELLS.md  ARCHIVE3_LSM_SUPERBLOCK.md  ARCHIVE3_OPEN_FLOW.md  ARCHIVE3_PAGE_05.md  ARCHIVE3_PAGE_VERIFY.md  ARCHIVE3_TLV_DIRECTORY.md  FORMAT_DISK_CHUNKMAP.md  FORMAT_LEGACY_BLOCKS.md  FORMAT_LEGACY_INLINE_RECORDS.md  FORMAT_LEGACY_METADATA.md  FORMAT_LEGACY_TAIL.md  RESEARCH_TIBX_EXPORTS.md  RESEARCH_TIBX_FILE_MAP.md  RESEARCH_TIBX_LSM.md  RESEARCH_TIBX_STRINGS.md  RESEARCH_TIBX_STRUCTURE.md  STRESS_TEST_RESULTS.md
examples/: README.md  extract_by_extension.py  inspect_format.py  walk_directory.py
tibread/: __init__.py  chunkmap.py  chunkmap_fs.py  chunkmap_legacy.py  chunkmap_locator.py  cli.py  fs_browse.py  indexer.py  lznt1.py  metadata.py  ntfs.py  reader.py  verify.py  xpress.py
tibread/mount/: fuse.py
tibread/tibx/: lsm.py  (+12 more)
tools/: README.md  tibwinmount.py
(+13 files in other folders)
